[CURLWEB-51] Fixed padding / margin spacing for Image Carousel block

--- a/curling-main/sass/modules/blocks/_block-image-carousel.scss
+++ b/curling-main/sass/modules/blocks/_block-image-carousel.scss
@@ -1,10 +1,5 @@
 .block-image-carousel {
-  padding-top: 40px;
-  padding-bottom: 20px;
-
-  @include responsive-min($responsive-laptop) {
-    padding-bottom: 52px;
-  }
+  padding: 0 2.5rem;
 
   &.image-carousel-gray {
     background-color: $cool-light-gray;
@@ -106,7 +101,7 @@
 
 .image-carousel-gallery {
   display: none;
-  margin-top: 40px;
+  margin-top: 2rem;
   margin-bottom: 20px;
   min-width: 0;
 
@@ -127,10 +122,6 @@
   display: none;
   min-width: 0;
   height: 100%;
-  @include responsive-min($responsive-laptop) {
-    margin-left: -15px;
-    margin-right: -15px;
-  }
 }
 
 .image-carousel-rtl .image-carousel-slide {
